extends MarginContainer
@onready var recipe_scroll: ScrollContainer = %RecipeScroll
@onready var recipe_label: RichTextLabel = %RecipeLabel
@onready var indicator_h_box: HBoxContainer = %IndicatorHBox
@onready var recipe_indicator: TextureButton = %RecipeIndicator
@onready var title_label: RichTextLabel = %TitleLabel
@onready var margin_container: MarginContainer = %MarginContainer
